examples/test/testpolicy10371.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10371
  namespace: namespace242
spec:
  podSelector:
    matchLabels:
      key11: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value7
          key49: value17
          key2: value0
      podSelector:
        matchLabels:
          key12: value37
          key49: value8
